@@ -1,4 +1,4 @@
-.\"	$NetBSD: schedctl.8,v 1.6 2008/05/25 23:22:16 ad Exp $
+.\"	$NetBSD: schedctl.8,v 1.7 2008/06/22 13:54:00 ad Exp $
 .\"
 .\" Copyright (c) 2008 The NetBSD Foundation, Inc.
 .\" All rights reserved.
@@ -120,6 +120,7 @@ command with real-time priority:
 .Xr nice 1 ,
 .Xr getpriority 2 ,
 .Xr setpriority 2 ,
+.Xr psrset 8 ,
 .Xr renice 8
 .Sh HISTORY
 The
